# plantbuddy-hw

./: #auto_saved_files#  .gitignore  .gitmodules  Dockerfile  FlivzNexxy_cpl_top.csv  Pipfile  PlantBuddy-cache.lib  PlantBuddy.kicad_pcb  PlantBuddy.kicad_pro  PlantBuddy.kicad_sch  PlantBuddy.pro  PlantBuddy.round-tracks-config  PlantBuddy.sch  PlantBuddy.step  build.sh  fp-lib-table  sym-lib-table
03_Firmware/: .clang-format  .gitignore  CMakeLists.txt  Makefile  OpenOCDConfig.cfg  PlantBuddy.code-workspace  app.ld  arm-none-eabi-gcc.cmake  memory_map.ld  plant-buddy.code-workspace  plantbuddy.ioc
03_Firmware/.devcontainer/: Dockerfile  devcontainer.json
03_Firmware/BLE_Application/OTA/src/: OTA_btl.c
03_Firmware/BlueNRG1_Periph_Driver/inc/: BlueNRG1_adc.h  BlueNRG1_dma.h  BlueNRG1_flash.h  BlueNRG1_gpio.h  BlueNRG1_i2c.h  BlueNRG1_mft.h  BlueNRG1_pka.h  BlueNRG1_radio.h  BlueNRG1_rng.h  BlueNRG1_rtc.h  BlueNRG1_spi.h  BlueNRG1_sysCtrl.h  BlueNRG1_timer.h  BlueNRG1_uart.h  BlueNRG1_wdg.h  misc.h
03_Firmware/BlueNRG1_Periph_Driver/src/: BlueNRG1_adc.c  BlueNRG1_dma.c  BlueNRG1_flash.c  BlueNRG1_gpio.c  BlueNRG1_i2c.c  BlueNRG1_mft.c  BlueNRG1_pka.c  BlueNRG1_radio.c  BlueNRG1_rng.c  BlueNRG1_rtc.c  BlueNRG1_spi.c  BlueNRG1_sysCtrl.c  BlueNRG1_timer.c  BlueNRG1_uart.c  BlueNRG1_wdg.c  misc.c
03_Firmware/Bluetooth_LE/inc/: bluenrg1_stack.h
03_Firmware/CMSIS/Include/: arm_common_tables.h  arm_math.h  core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_cm4_simd.h  core_cmFunc.h  core_cmInstr.h  core_sc000.h  core_sc300.h
03_Firmware/FreeRTOS/BlueNRG/: freertos_ble.h  freertos_lp.c
03_Firmware/FreeRTOS/Source/: croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
03_Firmware/FreeRTOS/Source/include/: FreeRTOS.h  StackMacros.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
03_Firmware/Inc/: BLE_config.h  BlueNRG1_conf.h  BlueNRG1_it.h  FreeRTOSConfig.h  UserConfig.h  ble.h  led.h  main.h  memory_map.h  sht2x.h  shtc3.h  soilhum.h
03_Firmware/Scripts/: ocdplot.py
03_Firmware/Src/: BlueNRG1_it.c  ble.c  led.c  main.c  sht2x.c  shtc3.c  soilhum.c
03_Firmware/config/: app_config.h  ble_app_config.h  pb_config.h  sdk_config.h
03_Firmware/config/debugger/: nrf52811.svd  openocd.cfg
03_Firmware/config/linker/: plant_buddy.ld
03_Firmware/config/make/: Makefile.common  Makefile.posix  Makefile.windows
03_Firmware/hal/inc/: asm.h  clock.h  compiler.h  crash_handler.h  fifo.h  gp_timer.h  hal_radio.h  hal_types.h  miscutil.h  osal.h  radio_ota.h  sleep.h  vtimer.h
03_Firmware/hal/src/: clock.c  fifo.c  gp_timer.c  hal_radio.c  miscutil.c  osal.c  radio_ota.c  sleep.c  vtimer.c
03_Firmware/i2c/: i2c.c  i2c.h
03_Firmware/inc/: pairing.h  sensors.h  soilhum_sensor.h  status.h
03_Firmware/lib/drv/: opt3001_driver.c  shtc3_driver.c  soilhum_driver.c
03_Firmware/lib/drv/inc/: opt3001.h  opt3001_driver.h  shtc3_driver.h  soilhum_driver.h
03_Firmware/opt3001/: opt3001.c  opt3001.h
03_Firmware/secure_bootloader/: Makefile  main.c  private.key  public_key.c  secure_bootloader_gcc_nrf52.ld
03_Firmware/secure_bootloader/config/: sdk_config.h
03_Firmware/src/: battery_sensor.c  ble_app.c  environment_sensor.c  lux_sensor.c  main.c  main.h  sensors.c  soilhum_sensor.c  statemachine.c  status.c  task_scheduler.c  task_scheduler.h
03_Firmware/src/ble/: ble_app.c  ble_app.h
03_Firmware/src/custom_services/: ble_cus.c  ble_cus.h
03_Firmware/src/drivers/: i2c_common.c  i2c_common.h
03_Firmware/src/drivers/ltr303/: ltr303.c  (+1 more)
03_Firmware/src/modules/: datalogger.c  datalogger.h  downloader.c  downloader.h  sensors.c  sensors.h  status.c  status.h  unix_time.c  unix_time.h
03_Firmware/util/: uuid-generator.py
03_Firmware/util/udev-rules/: 99-jlink.rules
(+241 files in other folders)
